Fix: fix topics not wrapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -548,6 +548,7 @@ body {
 
 .repository__topics {
   display: flex;
+  flex-wrap: wrap;
   margin: 10px 0;
 }
 
@@ -559,6 +560,7 @@ body {
   padding: 2px 10px;
   border-radius: 50px;
   margin-right: 5px;
+  margin-bottom: 5px;
   text-decoration: none;
 }
 
